--- a/src/components/ui/Menu.css
+++ b/src/components/ui/Menu.css
@@ -67,10 +67,6 @@
   outline: none;
 }
 
-.menu-tier1-item:hover {
-  opacity: 0.7;
-}
-
 .menu-tier1-item:active {
   opacity: 0.5;
 }
@@ -116,10 +112,6 @@
   transition: opacity 0.2s ease;
   -webkit-tap-highlight-color: transparent;
   outline: none;
-}
-
-.menu-tier2-item:hover {
-  opacity: 0.7;
 }
 
 .menu-tier2-item:active {
